--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li> <a href="./recipes/buckwheat.html">Buckwheat with chicken and vegetables</a> </li>
+        <li> <a href="./recipes/cheesecake.html">Cheesecake</a>  </li>
+        <li> <a href="./recipes/potato.html">Garlic Roasted Chicken and Potatoes</a> </li>
+    </ul>
 </body>
 </html>
