--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li> <a href="./recipes/buckwheat.html">Buckwheat with chicken and vegetables</a> </li>
-        <li> <a href="./recipes/cheesecake.html">Cheesecake</a>  </li>
-        <li> <a href="./recipes/potato.html">Garlic Roasted Chicken and Potatoes</a> </li>
-    </ul>
+    <div class="main-container">
+        <h1 class="main-header">Odin Recipes</h1>
+        <ul class="dishes-list">
+            <li> 
+                <a href="./recipes/buckwheat.html">Buckwheat with chicken and vegetables</a> 
+            </li>
+            <li> 
+                <a href="./recipes/cheesecake.html">Cheesecake</a>  
+            </li>
+            <li> 
+                <a href="./recipes/potato.html">Garlic Roasted Chicken and Potatoes</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
