add style for buckwheat.html, and also fix some html

--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -4,57 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buckwheat with chicken and vegetables</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Buckwheat with chicken and vegetables</h1>
+    <div class="mainDish-container">
+        <h1 class="dish-name">Buckwheat with chicken and vegetables</h1>
     <img src="../images/buckwheat_with_chicken_vegetables.jpg" width="440" height="300" alt="buckwheat_with_chicken_vegetables">
-    <h2>Decription</h2>
-    <p>Buckwheat kernels, both raw or brown, are used as a base, with some meat as a protein, supplemented with variety of vegetables. To increase a nutrition value of the dish, I use chicken stock as liquid ingredient. However, boiling water can be used instead. For protein ingredient I use chicken, lean pork, turkey or deboned lamb shanks. The first three could be used both raw or cooked, while lamb shanks I always cook beforehand. As I make this dish on regular basis it is much easier to have chicken or any other meat cooked in bulk, portioned and frozen for later use. When cooked for adults, vegetables are sliced and not grated, as I do for children. </p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 mug buckwheat kernels</li>
-        <li>2 onions</li>
-        <li>2-3 carrots, depending on their size</li>
-        <li>pumpkin in quantities equal to carrots</li>
-        <li>chicken meat, cooked with stock</li>
-        <li>8-10 cherry tomatoes</li>
-        <li>1 table spoon olive oil</li>
-        <li>1 table spoon coconut oil</li>
-        <li>pinch of fennel and caraway seeds</li>
-        <li>1 table spoon of garlic and chilli preserve (homemade)</li>
-        <li>sea salt and black pepper for seasoning</li>
-    </ul>
 
-    <h3>Preparation</h3>
-    <p>Chicken and stock</p>
-    <ol>
-        <li>put sliced and chopped vegetables in a pot: onions, carrots, cauliflower leaves or stalks, any leftovers like green parts of leek, tired tomatoes, etc.</li>
-        <li>add 6-8 chicken drumsticks</li>
-        <li>cover with cold water</li>
-        <li>add seasoning: fennel seeds, garlic and chilli paste, sea salt, fresh thyme</li>
-        <li>cook until boiling point and then simmer for 1.5-2 hours</li>
-        <li>let the contents of the pot to cool down to just being lukewarm, the longer the process takes place, the softer meat and more flavours in the stock you will get</li>
-        <li>separate meat from skin and bones</li>
-        <li>put the stock through the sieve</li>
-        <li>make desirable portions of meat, covered with stock</li>
-        <li>freeze individual portions if necessary</li>
-    </ol>
-    <p>Buckwheat with chicken and vegetables</p>
-    <ol>
-        <li>heat olive and coconut oil in a pot with thick bottom</li>
-        <li>when oil heats up, add fennel and caraway seeds</li>
-        <li>add onion, sliced in semi-circles, season with salt and pepper after 1-2 minutes of frying</li>
-        <li>reduce heat to low or even minimum and cook until onions become translucent</li>
-        <li>add carrots and pumpkin,cherry tomatoes cut in halves or quarters,garlic and chilli preserve (or any other spice mix),chicken meat, it can be added as a frozen block</li>
-        <li>if meat added frozen or semi-frozen, cook until it defrosts in the pot, stir all ingredients</li>
-        <li>add water, twice the volume of buckwheat (1 cup of buckwheat kernels to 2 cups of liquid), if chicken meat has plenty of liquid in it, take this into consideration</li>
-        <li>cook simmering on low heat, covered with lid, until carrots are nearly ready</li>
-        <li>add buckwheat, stir</li>
-        <li>cook on low to medium heat until the surface looks dry, there is still liquid in the pot and characteristic bubbles appear on top</li>
-        <li>cover the pot with a lid, place kitchen towel on top, cover with blanket (I use special cover for the pot. As I use this approach of final cooking in the resting pot often, I knitted myself 2 covers to fit the size of two pots, used for these purposes)</li>
-        <li>let the dish rest at least 60-90 minutes</li>
-        <li>the residual liquid will be absorbed</li>
-        <li>in covered cast iron Dutch oven and similar pots, the dish will stay very warm for 3-4 hours.</li>
-    </ol>
+    <section class="decription">
+        <h2>Decription</h2>
+        <p>Buckwheat kernels, both raw or brown, are used as a base, with some meat as a protein, supplemented with variety of vegetables. To increase a nutrition value of the dish, I use chicken stock as liquid ingredient. However, boiling water can be used instead. For protein ingredient I use chicken, lean pork, turkey or deboned lamb shanks. The first three could be used both raw or cooked, while lamb shanks I always cook beforehand. As I make this dish on regular basis it is much easier to have chicken or any other meat cooked in bulk, portioned and frozen for later use. When cooked for adults, vegetables are sliced and not grated, as I do for children. </p>
+    </section>
+    
+    <div class="ingredients">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 mug buckwheat kernels</li>
+            <li>2 onions</li>
+            <li>2-3 carrots, depending on their size</li>
+            <li>pumpkin in quantities equal to carrots</li>
+            <li>chicken meat, cooked with stock</li>
+            <li>8-10 cherry tomatoes</li>
+            <li>1 table spoon olive oil</li>
+            <li>1 table spoon coconut oil</li>
+            <li>pinch of fennel and caraway seeds</li>
+            <li>1 table spoon of garlic and chilli preserve (homemade)</li>
+            <li>sea salt and black pepper for seasoning</li>
+        </ul>
+    </div>
+
+        <div class="preparation">
+            <h3>Preparation</h3>
+            <p>Chicken and stock</p>
+            <ol>
+                <li>put sliced and chopped vegetables in a pot: onions, carrots, cauliflower leaves or stalks, any leftovers like green parts of leek, tired tomatoes, etc.</li>
+                <li>add 6-8 chicken drumsticks</li>
+                <li>cover with cold water</li>
+                <li>add seasoning: fennel seeds, garlic and chilli paste, sea salt, fresh thyme</li>
+                <li>cook until boiling point and then simmer for 1.5-2 hours</li>
+                <li>let the contents of the pot to cool down to just being lukewarm, the longer the process takes place, the softer meat and more flavours in the stock you will get</li>
+                <li>separate meat from skin and bones</li>
+                <li>put the stock through the sieve</li>
+                <li>make desirable portions of meat, covered with stock</li>
+                <li>freeze individual portions if necessary</li>
+            </ol>
+            <p>Buckwheat with chicken and vegetables</p>
+            <ol>
+                <li>heat olive and coconut oil in a pot with thick bottom</li>
+                <li>when oil heats up, add fennel and caraway seeds</li>
+                <li>add onion, sliced in semi-circles, season with salt and pepper after 1-2 minutes of frying</li>
+                <li>reduce heat to low or even minimum and cook until onions become translucent</li>
+                <li>add carrots and pumpkin,cherry tomatoes cut in halves or quarters,garlic and chilli preserve (or any other spice mix),chicken meat, it can be added as a frozen block</li>
+                <li>if meat added frozen or semi-frozen, cook until it defrosts in the pot, stir all ingredients</li>
+                <li>add water, twice the volume of buckwheat (1 cup of buckwheat kernels to 2 cups of liquid), if chicken meat has plenty of liquid in it, take this into consideration</li>
+                <li>cook simmering on low heat, covered with lid, until carrots are nearly ready</li>
+                <li>add buckwheat, stir</li>
+                <li>cook on low to medium heat until the surface looks dry, there is still liquid in the pot and characteristic bubbles appear on top</li>
+                <li>cover the pot with a lid, place kitchen towel on top, cover with blanket (I use special cover for the pot. As I use this approach of final cooking in the resting pot often, I knitted myself 2 covers to fit the size of two pots, used for these purposes)</li>
+                <li>let the dish rest at least 60-90 minutes</li>
+                <li>the residual liquid will be absorbed</li>
+                <li>in covered cast iron Dutch oven and similar pots, the dish will stay very warm for 3-4 hours.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
