--- a/recipes/potato.html
+++ b/recipes/potato.html
@@ -3,29 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Garlic Roasted Chicken and Potatoes</title>
 </head>
 <body>
-    <h1>Garlic Roasted Chicken and Potatoes</h1>
-    <img src="../images/roasted_potatoes.png" alt="roasted_potatoes photo" width="440" height="300">
-    <h2>Decription</h2>
-    <p>This recipe is very easy to adjust up or down. Just make sure your pan is big enough if adjusting up. I usually add more potatoes, since we like them. Serve with a mixed greens salad.</p>
+    <div class="mainDish-container">
+        <h1 class="dish-name">Garlic Roasted Chicken and Potatoes</h1>
+        <img src="../images/roasted_potatoes.png" alt="roasted_potatoes photo" width="440" height="300">
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>¼ cup butter</li>
-        <li>6 chicken leg quarters, split into drumsticks and thighs</li>
-        <li>6 large Yukon Gold potatoes, cut into chunks</li>
-        <li>24 cloves garlic, unpeeled</li>
-        <li>salt and ground black pepper to taste</li>
-        <li>¼ cup maple syrup</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat oven to 400 degrees F (200 degrees C).</li>
-        <li>Place the butter into a roasting pan, and melt in the oven. When butter is melted, swirl to coat the bottom of the roasting pan, and place the chicken drumsticks and thighs, potatoes, and unpeeled garlic cloves into the pan. Sprinkle with salt and black pepper; turn the chicken, potatoes, and garlic to coat with butter.</li>
-        <li>Bake in the preheated oven until the chicken is no longer pink inside and the juices run clear, about 40 minutes, basting 3 times with pan drippings. Brush maple syrup over the chicken pieces, and spoon pan drippings over the potatoes.</li>
-        <li>Return to oven, and bake until the chicken and potatoes are tender and browned, about 20 more minutes. An instant-read thermometer inserted into a thick part of a thigh should read at least 165 degrees F (74 degrees C). To serve, squeeze garlic from the baked cloves, and spread the soft garlic over the chicken. Pour pan juices over chicken and potatoes.</li>
-    </ol>
+        <section class="decription">
+            <h2>Decription</h2>
+            <p>This recipe is very easy to adjust up or down. Just make sure your pan is big enough if adjusting up. I usually add more potatoes, since we like them. Serve with a mixed greens salad.</p>
+        </section>
+
+        <div class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>¼ cup butter</li>
+                <li>6 chicken leg quarters, split into drumsticks and thighs</li>
+                <li>6 large Yukon Gold potatoes, cut into chunks</li>
+                <li>24 cloves garlic, unpeeled</li>
+                <li>salt and ground black pepper to taste</li>
+                <li>¼ cup maple syrup</li>
+            </ul>
+        </div>
+
+        <div class="preparation">
+            <h3>Steps</h3>
+            <ol>
+                <li>Preheat oven to 400 degrees F (200 degrees C).</li>
+                <li>Place the butter into a roasting pan, and melt in the oven. When butter is melted, swirl to coat the bottom of the roasting pan, and place the chicken drumsticks and thighs, potatoes, and unpeeled garlic cloves into the pan. Sprinkle with salt and black pepper; turn the chicken, potatoes, and garlic to coat with butter.</li>
+                <li>Bake in the preheated oven until the chicken is no longer pink inside and the juices run clear, about 40 minutes, basting 3 times with pan drippings. Brush maple syrup over the chicken pieces, and spoon pan drippings over the potatoes.</li>
+                <li>Return to oven, and bake until the chicken and potatoes are tender and browned, about 20 more minutes. An instant-read thermometer inserted into a thick part of a thigh should read at least 165 degrees F (74 degrees C). To serve, squeeze garlic from the baked cloves, and spread the soft garlic over the chicken. Pour pan juices over chicken and potatoes.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
